--- a/typescript/package.json
+++ b/typescript/package.json
@@ -32,6 +32,8 @@
     "unpause:devnet": "npx hardhat unpause ../../kinesis-deploy/tmp/artifacts/core-deployment.json devnet --network localhost",
     "unpause:testnet": "npx hardhat unpause ../../kinesis-deploy/tmp/artifacts/core-deployment.json testnet --network sepolia",
     "unpause:mainnet": "npx hardhat unpause ../../kinesis-deploy/tmp/artifacts/core-deployment.json mainnet --network ethereum",
+    "verify-core:mainnet": "npx hardhat verify-core mainnet",
+    "verify-warp:mainnet": "npx hardhat verify-warp ../../kinesis-deploy/tmp/artifacts/erc20.txt ../../kinesis-deploy/tmp/artifacts/agent-config.json mainnet --network ethereum",
     "mock": "ts-node ./scripts/mocks/run-mock.ts",
     "generate": "ts-node ./scripts/generator/generate-modules.ts",
     "solhint": "solhint contracts/**/*.sol"
