--- a/.github/workflows/kinesis-ci.yml
+++ b/.github/workflows/kinesis-ci.yml
@@ -22,6 +22,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./typescript
       - name: Run tests
         run: npx hardhat test
         working-directory: ./typescript
