--- a/.github/workflows/kinesis-ci.yml
+++ b/.github/workflows/kinesis-ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
         working-directory: ./typescript
       - name: Run tests
-        run: npx hardhat test --network hardhat
+        run: npx hardhat test
         working-directory: ./typescript
   test-pact:
     name: Test KDA smart contracts
